--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             outline: none;
             white-space: pre-wrap;
             word-wrap: break-word;
-            caret-color: var(--text-light);
+            color: var(--text-light);
             height: 100%;
             display: block;
         }
