--- a/index.html
+++ b/index.html
@@ -188,11 +188,8 @@
                 <div class="panel-actions">
                     <select id="llm-selector" class="panel-action-btn">
                         <option value="">Select LLM...</option>
-                        <option value="https://chat.openai.com">ChatGPT</option>
-                        <option value="https://chat.deepseek.com">DeepSeek</option>
-                        <option value="https://claude.ai">Claude AI</option>
-                        <option value="https://gemini.google.com">Gemini</option>
-                        <option value="https://perplexity.ai">Perplexity</option>
+                        <option value="https://admin.chatterbot.support/share/1897a236136449eb9e2be847c04b1a5d">ChatGPT</option>
+                        <option value="https://admin.chatterbot.support/share/6229350fc344462cbc8d22a482bcdfaf">DeepSeek</option>
                         <option value="https://example.com">Example.com (Test)</option> 
                     </select>
                 </div>
