--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         color: var(--text-light) !important; /* Add !important to override Prism */
         background: transparent !important;
         height: 100%;
+          width: 100%;
         display: block;
         font-family: 'Fira Code', monospace;
     }
