--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                         <option value="">Select LLM...</option>
                         <option value="https://admin.chatterbot.support/share/1897a236136449eb9e2be847c04b1a5d">ChatGPT</option>
                         <option value="https://admin.chatterbot.support/share/6229350fc344462cbc8d22a482bcdfaf">DeepSeek</option>
+                        <option value="https://chat.qwen.ai/">Qwen</option>
                         <option value="https://example.com">Example.com (Test)</option> 
                     </select>
                 </div>
