--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
     &lt;/style&gt;
 &lt;/head&gt;
 &lt;body&gt;
-    &lt;h1&gt;Hello World!&lt;/h1&gt;
-    &lt;p&gt;This is a sample HTML document. Edit me!&lt;/p&gt;
+    &lt;h1&gt;Welcome to VibeCoding Studio!&lt;/h1&gt;
+    &lt;p&gt;This is a sample HTML document. Edit me as you please!&lt;/p&gt;
     &lt;script&gt;console.log('Sample script executed!');&lt;/script&gt;
 &lt;/body&gt;
 &lt;/html&gt;</textarea>
