--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <title>3-Panel Interface - VibeCoding Studio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
+   
+    
     <style>
+        
         :root {
+	--title: "Hollow Animation Effect";
+	--autor: "Bebell Digital Solutions";
+	--contact: "info@bebelldigitalsolutions.com";
+	--description: "";
+	--keywords: "";
+	--last-modified: "2025-06-01";
+	--content-language: "en";
+	--generator: "HTML5, CSS3, JavaScript, Three.js, requestAnimationFrames,";
             --primary-color: #df1783;
             --dark-bg: #1a1a1a;
             --panel-bg: #252526;
